--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,18 +1,23 @@
 <!-- As a link -->
 <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
-      <a class="navbar-brand" href="#">Team Smith Lead Management Login</a>
+      <a class="navbar-brand" href="#">TSLM</a>
   </div>
 </nav>
 {% if user.is_authenticated %}
   <li class="nav-item">
-      <a class="nav-link" href="#">Logout</a>
+      <a class="nav-link" href="{% url 'logout' %}">Logout</a>
   </li>
 {% else %}
   <li class="nav-item">
-      <a class="nav-link" href="#">Login</a>
+    <a class="nav-link" href="{% url 'register' %}">Register</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'home' %}">Login</a>
   </li>
 {% endif %}
+
+
 
 <!-- As a heading -->
 <nav class="navbar bg-body-tertiary">
