--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="base.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TS CRM</title>
@@ -9,7 +10,7 @@
   <body>
     {% include 'navbar.html'%}
 
-    <div class="'container">
+    <div class="container">
         <br/>
         {% if messages %}
           {% for message in messages %}
@@ -17,14 +18,18 @@
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div> 
-
           {% endfor %}
-
         {% endif %}
-
-        {% block content%}
+        {% block content %}
         {% endblock %}
     </div>   
+
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 bg-light">
+      <div class="container text-center">
+        <span class="text-muted">© 2024 Catalyst Reaction LLC. All rights reserved.</span>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
