--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,6 +22,6 @@
 <!-- As a heading -->
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Navbar</span>
+      <span class="navbar-brand mb-0 h1"></span>
   </div>
 </nav>
